--- a/sass/components/_header-mob-menu.scss
+++ b/sass/components/_header-mob-menu.scss
@@ -1,5 +1,13 @@
 .mob-menu {
-  display: none;
+  .container {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  // display: none;
 
   position: fixed;
 
@@ -18,9 +26,9 @@
 
   background-color: getColor(mainBgr);
 
-  &.is-open {
-    display: block;
-  }
+  // &.is-open {
+  //   display: block;
+  // }
 }
 
 .mob-menu__btn {
@@ -47,14 +55,16 @@
     top: 10px;
     right: 15px;
   }
-}
 
-.mob-menu__icon {
-  fill: currentColor;
+  &-icon {
+    fill: currentColor;
+  }
 }
 
 .mob-menu__nav {
-  @include list;
+  &-list {
+    @include list;
+  }
 
   &-item:not(:last-child) {
     padding-bottom: 32px;
@@ -76,13 +86,11 @@
   }
 }
 
-.mob-menu__bottom {
-  margin-top: auto;
-}
-
-.mob-menu__contacts-list {
-  @include list;
-  margin-bottom: 64px;
+.mob-menu__contacts {
+  &-list {
+    @include list;
+    margin-bottom: 64px;
+  }
 
   &-item:not(:last-child) {
     padding-bottom: 32px;
@@ -112,18 +120,17 @@
   }
 }
 
-.mob-menu__soc-list {
-  @include list;
-  display: flex;
-  align-items: center;
+.mob-menu__soc {
+  &-list {
+    @include list;
+    @include centeredFlex;
+    // display: flex;
+    // align-items: center;
 
-  font-size: 18px;
-  line-height: 1.22;
+    font-size: 18px;
+    line-height: 1.22;
 
-  color: getColor('brand');
-
-  &-link {
-    @include link;
+    color: getColor('brand');
   }
 
   &-item:not(:last-child) {
@@ -144,5 +151,9 @@
     height: 22px;
 
     background-color: rgba(33, 33, 33, 0.2);
+  }
+
+  &-link {
+    @include link;
   }
 }
