--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,9 +3,15 @@
   padding-bottom: 25px;
   border-bottom: 1px solid getColor('headerLine');
 
-  &__container,
   &__nav {
     display: flex;
     align-items: center;
+  }
+
+  @media screen and (min-width: $tablet) {
+    &__container {
+      display: flex;
+      align-items: center;
+    }
   }
 }
