--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './layout/body';
 @import './utils/modal-open';
 @import './utils/mob-menu-closed';
+@import './utils/is-hidden';
 @import './base/visually-hidden';
 @import './layout/section';
 @import './layout/container';
