--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import './utils/mixins';
 @import './layout/body';
 @import './utils/modal-open';
-@import './utils/mob-menu-closed';
+@import './utils/mob-menu-opened';
 @import './utils/is-hidden';
 @import './base/visually-hidden';
 @import './layout/section';
