--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 0 15px;
 
-  border: 2px solid tomato;
+  // border: 2px solid tomato;
 
   // @media screen and (min-width: $pre_safety) {
   //   width: $pre_safety;
