--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -2,7 +2,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  outline: 2px solid greenyellow;
+  // outline: 2px solid greenyellow;
 
   @media screen and (min-width: $desktop) {
     padding-top: 94px;
