--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -36,7 +36,7 @@
       content: '';
 
       position: absolute;
-      bottom: -33px;
+      bottom: -37px;
       left: 0;
 
       display: block;
@@ -45,6 +45,10 @@
 
       border-radius: 2px;
       background-color: getColor('brand');
+
+      @media screen and (min-width: $desktop) {
+        bottom: -32px;
+      }
     }
   }
 }
