--- a/sass/components/_header-mob-menu.scss
+++ b/sass/components/_header-mob-menu.scss
@@ -138,7 +138,8 @@
 .mob-menu__soc {
   &-list {
     @include list;
-    @include centeredFlex;
+    display: flex;
+    align-items: center;
 
     @media screen and (max-width: $pre-mobile) {
       flex-wrap: wrap;
